package cruz;

public enum Peg {
        WHITE,
        BLACK
}
